# email-agent-env

./: .gitignore  Dockerfile  README.md  README_HF_HEADER.txt  api.py  app.py  inference.py  openenv.yaml  pyproject.toml  run.py  server.py  setup.py
data/: emails.json
email_agent_env.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
env/: environment.py  models.py  state.py
graders/: __init__.py  easy_grader.py  hard_grader.py  medium_grader.py
models/: agent.py
server/: app.py
tasks/: easy_task.py  hard_task.py  medium_task.py
