[project]
name = "email-agent-env"
dynamic = ["version"]
description = "Customer support email triage environment"
readme = "README.md"
license = {text = "MIT"}
authors = [{ name = "Vikki" }]
dependencies = []
requires-python = ">=3.10"

[project.urls]
repository = "https://github.com/vikki-05/email-agent-env.git"

[project.entry-points."openenv.environments"]
email-agent-env = "env.environment:EmailEnv"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]