[project]
name = "email-agent-env"
version = "0.1.0"
description = "Customer support email triage environment"
authors = [{ name = "Vikki" }]
dependencies = []
requires-python = ">=3.10"

[project.entry-points."openenv.environments"]
email-agent-env = "env.environment:EmailEnv"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*"]