[project]
name = "email-agent-env"
version = "0.1.0"
description = "Customer support email triage environment"
authors = [{ name = "Vikki" }]
dependencies = ["openenv-core>=0.2.0"]
requires-python = ">=3.10"

[project.scripts]
server = "server.app:main"

[project.entry-points."openenv.environments"]
email-agent-env = "env.environment:EmailEnv"

[project.entry-points."openenv.tasks"]
easy   = "tasks.easy_task:run"
medium = "tasks.medium_task:run"
hard   = "tasks.hard_task:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "tasks*", "models*", "graders*", "data*", "server*"]
